# sample_project

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  SampleProjectConfig.h.in  test_script.sh
.github/workflows/: basic_workflow.md  basic_workflow.yml  code_tests.yml  first_workflow.yml  issues.yml
lib/adder/: Makefile  adder.cpp  adder.h  cmake_install.cmake
src/: CMakeLists.txt  count_bits_in_range_of_nums  count_bits_in_range_of_nums.cpp  main.c  main.cpp
src/best_sum/: CMakeLists.txt  best_sum.c  best_sum.h
src/can_sum/: CMakeLists.txt  can_sum.c  can_sum.h
src/checkout/: CMakeLists.txt  checkout.cpp
src/construct/: CMakeLists.txt  construct.cpp  construct.hpp
src/crc/: CMakeLists.txt  crc.c  crc.h
src/fibonacci/: CMakeLists.txt  fibonacci.c  fibonacci.h
src/grid_traveler/: CMakeLists.txt  grid_traveler.c  grid_traveler.h
src/hamming_code/: CMakeLists.txt  hamming_code.cpp  hamming_code.hpp
src/how_sum/: CMakeLists.txt  how_sum.c  how_sum.h
src/include/: checkout.hpp  get_rx_tx_mask.h  print_file_name.h
src/longest_perfect_piece/: CMakeLists.txt  longest_perfect_piece.c  longest_perfect_piece.h
src/masking/: CMakeLists.txt  get_rx_tx_mask.c  get_rx_tx_mask.h
src/problem_of_the_day/: CMakeLists.txt  geeks_for_geeks.cpp  geeks_for_geeks.hpp  magic_triplets.cpp  max_sum_lcm.cpp  reverse_spiral.hpp  tree_levels_are_anagrams.cpp  unique_partitions.cpp
src/sum_of_beauty/: CMakeLists.txt  sum_of_beauty.cpp  sum_of_beauty.hpp
src/tabulation/fib/: fib.c  fib.h
src/utils/: CMakeLists.txt  debug.h  linked_list.c  linked_list.h  matrix.c  matrix.h  trace.c  vector.c  vector.h
test/: CMakeLists.txt
test/best_sum/: CMakeLists.txt  best_sum_test.cpp
test/can_sum/: can_sum_test.cpp
test/checkout/: checkout_test.cpp
test/construct/: construct_test.cpp
test/crc/: CMakeLists.txt  crc_test.cpp
test/fibonacci/: fibonacci_test.cpp
test/grid_traveler/: grid_traveler_test.cpp
test/hamming_code/: hamming_code_test.cpp
test/how_sum/: how_sum_test.cpp
test/longest_perfect_piece/: CMakeLists.txt  longest_perfect_piece_test.cpp
test/masking/: get_rx_tx_mask_test.cpp
test/print_file_name/: CMakeLists.txt  print_file_name_test.cpp
test/problem_of_the_day/: CMakeLists.txt  geeks_for_geeks_test.cpp
test/sum_of_beauty/: sum_of_beauty_test.cpp
uml/: example.pu
